<resources>
    <string name="NS">http://schemas.android.com/apk/res/object.dbnewgo.client</string>
    <string name="app_name1">HomeCOO</string>
    <string name="softversion">5.0</string>
    <string name="softversion1">5.0.15.08.13-LD</string>
    <string name="camera_user">User Name</string>
    <string name="version_code">Version Number</string>
    <string name="version_code1">Inner Version</string>
    <string name="soft_name">Software Name</string>
    <string name="camera_pwd">Password</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>
    <string name="exit_alert">comfirm exit </string>
    <string name="password">Password:</string>
    <string name="showpwd">Show Password </string>
    <string name="connected">Connected</string>
    <string name="pwd_no_empty">Password cann\'t be empty</string>
    <string name="camera_port">Port</string>
    <string name="send_error">Send failed</string>
    <string name="recv_error">Receive failed</string>
    <string name="unknow_error">Unknown error</string>
    <string name="version_conent">V 0.0.0.1</string>
    <string name="more_about_disclaimer">Software statement</string>
    <string name="more_about_version">Version information</string>
    <string name="more_about_contact">Contact Us</string>
    <string name="camera_not_online">Camera dropped, back to the home page, please reconnect</string>
    <string name="app_running">App running</string>
    <string name="show_t_xxx">PLS press the button on the left and tuenrd on this feature</string>
    <string name="str_version">Version</string>
    <string name="pppp_status_initialing">Connected, initializing</string>
    <string name="delete_camera">Delete</string>
    <string name="list_option">Operation</string>
    <string name="del_alert">Confirm the deletion?</string>
    <string name="str_search">Search</string>
    <string name="str_add">Add</string>
    <string name="str_about">About</string>
    <string name="connecting">Fetching videos ...</string>
    <string name="init_network_error">Failed to initialize network</string>
    <string name="connect_failed">Connection failed</string>
    <string name="edit">Modify</string>
    <string name="setting">Setting</string>
    <string name="string_about">About Us</string>
    <string name="camera_type">Camera type</string>
    <string name="device_id_name">ID:</string>
    <string name="device_type_name">Type:</string>
    <string name="device_status_name">State:</string>
    <string name="pppp_status_unknown">Unknown state</string>
    <string name="pppp_status_connecting">Connecting</string>
    <string name="pppp_status_online">Online</string>
    <string name="pppp_status_disconnect">Offline</string>
    <string name="pppp_status_connect_failed">connect failed</string>
    <string name="pppp_status_invalid_id">ID number is invalid</string>
    <string name="pppp_dev_type_unknown">Unknown type</string>
    <string name="device_not_on_line">Camera offline</string>
    <string name="pppp_mode">mode:</string>
    <string name="pppp_mode_p2p_normal">p2pconnection</string>
    <string name="pppp_mode_p2p_relay">P2P forwarding</string>
    <string name="pppp_mode_unknown">Unknown</string>
    <string name="pppp_status_connect_timeout">Connection timed out</string>
    <string name="pppp_status_connect_log_errer">The user does not exist</string>
    <string name="main_tap_here_add_vidicon">Please click here to add doorbell</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="main_select_all">Select all</string>
    <string name="main_select_reverse">Unselected</string>
    <string name="main_edit">Edit</string>
    <string name="main_check">Check</string>
    <string name="main_vidicon">Camera</string>
    <string name="main_alarm_event">Visitor logs</string>
    <string name="main_pic">Picture</string>
    <string name="main_vid">Video</string>
    <string name="main_vid1">Videos to watch</string>
    <string name="main_remote">long-range</string>
    <string name="main_phone">Phone</string>
    <string name="main_setting_prompt">Camera is not online and cannot be set</string>
    <string name="exit">退出</string>
    <string name="main_alarm">Record</string>
    <string name="main_more">More</string>
    <string name="main_plea_addcam">Please add the Bell</string>
    <string name="main_not_administrator">Not an administrator or network access permissions for the user authentication failed</string>
    <string name="main_show_back">Press once to exit the program</string>
    <string name="four_show_back">Once again, exit four pictures broadcast!</string>
    <string name="main_show_delecting">Being deleted, please check back later!</string>
    <string name="input_camera_name">Please enter the name Bell</string>
    <string name="add_camera">Add Bell</string>
    <string name="edit_camera">Edit Doorbell</string>
    <string name="camera_name">Name</string>
    <string name="camera_addr">IP Address</string>
    <string name="input_camera_addr">Please enter the IP address</string>
    <string name="input_camera_port">Please enter a port</string>
    <string name="input_camera_user">Please enter your user name</string>
    <string name="input_camera_id">Enter the door bell ID</string>
    <string name="camera_id">Bell ID</string>
    <string name="scan_cameraid">Scan QR Code</string>
    <string name="scan_cameraid_fail">Scan failed, Please rescan</string>
    <string name="add_search_result">Search results</string>
    <string name="add_search_no">Can not find, please try again ...</string>
    <string name="add_twodimensioncode">QR code program is starting ...</string>
    <string name="add_camer_no_add">The camera has reached the maximum value you add, delete some useless camera before you add!</string>
    <string name="input_camera_all_include">The device already exists</string>
    <string name="add_camer_invi">ID number is invalid, not complying with the rules!</string>
    <string name="searching_tip">searching, please wait ...</string>
    <string name="search_camera">Search camera</string>
    <string name="refresh">Refresh</string>
    <string name="setting_camera">Camera settings</string>
    <string name="setting_wifi">Wifi settings</string>
    <string name="setting_user">User settings</string>
    <string name="setting_ftp">Ftp settings</string>
    <string name="setting_alerm">Alarm settings</string>
    <string name="setting_time">Equipment time settings</string>
    <string name="setting_mail">Delay setting</string>
    <string name="setting_sdcard">SD card setup</string>
    <string name="alerm_setting">Alarm settings</string>
    <string name="setting_ap">AP parameters setting</string>
    <string name="setting_ap_ssid">SSID：</string>
    <string name="setting_ap_pwd">Password：</string>
    <string name="setting_ap_show">SSID or password cannot be empty</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_manager">Manage WiFi network</string>
    <string name="wifi_channel">Channel number:</string>
    <string name="wifi_channel_show">Channel number can not be empty</string>
    <string name="wifi_signal_strong">Signal strength:</string>
    <string name="wifi_safe">Security:</string>
    <string name="wifi_no_safe">Free</string>
    <string name="wifi_set_failed">WiFi Setup failed</string>
    <string name="wifi_set_success">WiFi set up successfully...</string>
    <string name="wifi_not_connected">Not connected</string>
    <string name="wifi_scanning">WiFi is scanning, please wait ...</string>
    <string name="wifi_scan_failed">WiFi scan failed</string>
    <string name="wifi_getparams">Getting WiFi info ...</string>
    <string name="wifi_getparams_failed">Failed to get WiFi information</string>
    <string name="wifi_notchange">WiFi has not changed, do not need to set</string>
    <string name="wifi_pwd_toolong">Password cannot be longer than 128 bits</string>
    <string name="user_admin">Administrator</string>
    <string name="user_operator">The operator</string>
    <string name="user_visitor">visitor</string>
    <string name="user_setting">user setting</string>
    <string name="user_set_failed">user setting failed</string>
    <string name="user_set_success">User settings successfully, the camera is being restarted</string>
    <string name="user_name_no_empty">The user name cannot be empty</string>
    <string name="user_name">User name:</string>
    <string name="user_getparams">Getting user information ...</string>
    <string name="user_getparams_failed">Failed to get user information</string>
    <string name="user_name_toolong">User name cannot be longer than 64-bit</string>
    <string name="user_pwd_toolong">Password cannot be more than 64-bit</string>
    <string name="alerm_detector_layout">Motion detection deployment</string>
    <string name="alerm_detector_sensitivity">Motion detection sensitivity</string>
    <string name="alerm_sensitivity_desc">The smaller the number the more sensitive)</string>
    <string name="alerm_io_layout">Alarm input protection</string>
    <string name="alerm_trigger_level">Trigger level</string>
    <string name="alerm_presetsit">Alarm preset position when linkage</string>
    <string name="alerm_io_move">Alarm IO linkage</string>
    <string name="alerm_ioout_level">Output level</string>
    <string name="alerm_mail_inform">Alarm email notification</string>
    <string name="alerm_upload_picture">Alarm to upload pictures</string>
    <string name="alerm_upload_picture_time_interval"> Upload pictures time interval (in seconds)</string>
    <string name="alerm_trigger_event">Alrm-triggering event</string>
    <string name="alerm_set_failed">Alarm Setup failed</string>
    <string name="alerm_ioin_levelhight">High level</string>
    <string name="alerm_ioin_levellow">Low level</string>
    <string name="alerm_getparams">Getting alert information ...</string>
    <string name="alerm_getparams_failed">Failed to get police information</string>
    <string name="alerm_preset_no">none</string>
    <string name="alerm_uploadinterval_toolong">Upload date cannot be more than 255 seconds</string>
    <string name="mail_163">smtp.163.com</string>
    <string name="mail_126">smtp.126.com</string>
    <string name="mail_sina">smtp.sina.com</string>
    <string name="mail_yahoo_com">smtp.mail.yahoo.com</string>
    <string name="mail_sohu">smtp.sohu.com</string>
    <string name="mail_yeah">smtp.yeah.net</string>
    <string name="mail_tom">smtp.tom.com</string>
    <string name="mail_21cn">smtp.21cn.com</string>
    <string name="mail_qq">smtp.qq.com</string>
    <string name="mail_gmail">smtp.gmail.com</string>
    <string name="mail_eyou">mx.eyou.com</string>
    <string name="mail_263">smtp.263.net</string>
    <string name="doorbell_setting">Configuration</string>
    <string name="doorbell_reset">Refresh the WiFi</string>
    <string name="doorbell_check">WiFi signal is not detected, please connect to the route!</string>
    <string name="doorbell_wifi"> current WiFi</string>
    <string name="doorbell_wifi_pwd">Password</string>
    <string name="doorbell_wifi_one_key">One-click Configuration</string>
    <string name="doorbell_setting_alarm_type_0">Motion detection</string>
    <string name="doorbell_setting_alarm_type_1">PIR</string>
    <string name="doorbell_setting_alarm_type_2">Motion detection +PIR</string>
    <string name="biz_add_poup_title">Add a user</string>
    <string name="biz_add_edit_show1">Please enter your password</string>
    <string name="biz_add_creat">comfirm</string>
    <string name="biz_add_cancel">cancel</string>
    <string name="biz_add_poup_show">Please input to add to the whitelist of the user name and password</string>
    <string name="biz_add_edit_show">Please enter a new user name</string>
    <string name="biz_main_about">About</string>
</resources>