<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#17365d"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/doorbell_setting"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:background="@drawable/btn_selector"
            android:padding="7dp"
            android:text="@string/doorbell_reset"
            android:textColor="@color/text_color_btn" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/doorbell_check"
        android:textColor="#90000000" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/log_log_1" />

    <LinearLayout
        android:id="@+id/l_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_input"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm-0123456789"
            android:hint="@string/doorbell_wifi"
            android:maxLength="20"
            android:padding="8dp"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cbced2" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm-0123456789"
            android:hint="@string/doorbell_wifi_pwd"
            android:maxLength="20"
            android:padding="8dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_one_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/new_user_selector"
        android:padding="10dp"
        android:text="@string/doorbell_wifi_one_key"
        android:textColor="@color/text_color_d" />

</LinearLayout>