<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#95000000"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_type_0"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:singleLine="true"
        android:text="@string/doorbell_setting_alarm_type_0"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_type_1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/doorbell_setting_alarm_type_1"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_type_2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/button_selector"
        android:text="@string/doorbell_setting_alarm_type_2"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

</LinearLayout>