<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/newbg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        style="@style/top_bg_style"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_back_selector"
            android:text="@string/back"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:id="@+id/tv_camera_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10.0dip"
            android:shadowColor="@color/color_shadow"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/biz_main_about"
            android:textColor="@color/color_white"
            android:textSize="18.0sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:padding="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="15.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/homecoo_mini_logo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_code"
                    android:textColor="#95000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/softversion"
                    android:textColor="#95000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_whitef12_corner"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/soft_name"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#000000" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#80000000" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/version_code1"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/softversion1"
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>